--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -36,7 +36,7 @@
 }
 
 .hero-content {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   padding: 6rem 2rem 0 6rem;
   margin: 0;
   text-align: left;
